src/styles/app.scss
/* ... */
.navbar-default .navbar-nav > li > a:hover {
  background-color: $brand-accent-dark;
  text-decoration: none;
}

.navbar-right .navbar-btn button.btn:hover, .navbar-right .navbar-btn button.btn:focus {
  background-color: $brand-accent-dark;
  text-decoration: none;
  color: white;
}

.h2 {
  background-color: #f5f5f5;
}

.top-actions-placeholder {
  z-index: 1000;
}

modal-body {
  .top-actions {
    padding: 0 0 10px 0;
  }
}

.top-actions {
  @include clearfix;

  padding: 10px 10px 10px 10px;

  p.button-label {
    padding-top: 8px;
  }

  .left {
    float: left;
    margin-right: 5px;
  }

  .right {
    float: right;
    margin-left: 5px;
  }

  .alert {
    clear: both;
  }
}

modal-body {

  .empty-message {
    padding: 3px 20px;
    a {
      cursor: pointer;
    }
  }

  .tt-menu {
    max-height: 400px;
    overflow-y: auto;
  }

  .details {
    font-size: x-small;
  }

  > p {
    max-width: 600px;
  }

  .input-group {
    width: 100%;
    padding-bottom: 20px;
  }

  textarea {
    height: 118px;
  }

  .search-selection {
    height: calc(100vh - 300px);
    overflow-y: auto;
  }

  .search-results {

    height: calc(100vh - 260px);

    &.with-button {
      height: calc(100vh - 315px);
    }

    overflow-y: auto;

    .search-result {
      font-size: small;
      cursor: pointer;
      border: 1px solid $gray-light;
      margin-bottom: 10px;
      padding-left: 10px;
      box-shadow: 2px 2px 2px $brand-accent-light;

      &.add-new {
        color: white;
        background-color: $brand-accent-light;
        border: 1px solid $brand-accent-dark;
      }

      &.selected {
        background-color: $brand-accent-lighter;
        border: 1px solid $brand-accent-dark;
      }

      &.selection {
        box-shadow: 2px 2px 2px $brand-accent-dark;
        border-color: $brand-primary;
      }

      &.disabled {
        background-color: whitesmoke;
        color: #a5a5a5;
        cursor: not-allowed;
      }

      i {
        float: right;
        padding: 5px;
        line-height: 5px;
      }
    }
  }
}

a.accordion-toggle {
  outline: 0;
}

.main {
  @include clearfix;
  padding: 10px;

  &.with-footer {
    margin-bottom: $footer-height;
    padding-top: 0px;
    padding-bottom: 0px;
  }
}

.iow-breadcrumb {
  &.with-breadcrumb {
    display: none;
  }
}

.frontpage-container {
  max-width: 1500px;
  margin-left: auto;
  margin-right: auto;
}

.frontpage-text-container {
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  h3 {
    color: $brand-primary;
  }
}

.main-functions-row {
  padding-top: 30px;
  padding-bottom: 30px;
  margin-bottom: 30px;
}

.main-content-row {
  padding-top: 30px; 
  margin-bottom: 40px;
  line-height: 1.15!important;
  span {
    font-size: 14px;
  }
  blockquote {
    padding-top: 0;
    padding-left: 20px;
    margin-bottom: 20px;
    color: #666666;
    border-left-width: 5px;
    border-color: $brand-accent-lighter;
  }
}

.main-bottom-row {
  padding-top: 30px;
  padding-bottom: 150px;
  background-color: $brand-accent-lighter;
}

.iow-panel {
  @extend .panel;
  @extend .panel-default;
  overflow: hidden;
}

.frontpage-panel {
  @extend .iow-panel;
  margin-top: 21px;
  min-height: 190px;
  .iow-panel-heading {
    h3 {
      margin-top: 5px;
      margin-bottom: 4px;
    }
  }
}

.group-panel {
  @extend .iow-panel;
  margin-top: 30px;
}

.iow-panel-heading {
  @extend .panel-heading;
  h2 {
    margin: 5px;
  }
  border: none;
  background-color: $brand-accent-lighter!important;
}

.point {
  @include clearfix;
  margin-top: 40px;

  $bullet-width: 100px;

  .content {
    padding-left: 20px;
    width: calc(100% - #{$bullet-width});
    float: left;
  }

  .bullet-container {
    float: left;
    width: $bullet-width;
    padding-top: 10px;
    padding-left: 10px;

    .bullet {
      text-align: center;
      vertical-align: text-bottom;
      border: 1px solid #ddd;;
      border-radius: 60px;
      padding: 0;
      background-color: #f5f5f5;

      span {
        display: inline-block;
        padding: 35px 40px;
        text-align: center;
        margin: 0;
      }
    }
  }
}

.frontpage-panel__body {
  @extend .panel-body;

  .input-group {
    width: 100%;
    padding-bottom: 30px;

    .glyphicon {
      font-size: x-large;
    }
  }

  .advanced-search {
    top: -20px;
    position: relative;
  }
}

.panel__list {
  list-style: none;
  padding: 0;
  margin: 0;
  p {
    font-size: small;
    padding-left: 20px;
    margin-bottom: 0;
  }
}

.selectable-panel__list {
  @extend .panel__list;
  max-height: 400px;
  overflow-y: auto;
  margin: -15px;
  li {
    cursor: pointer;
    padding: 10px 20px;
  }
  li:hover {
    text-decoration: none;
    background-color: $list-group-hover-bg;
  }
  li.selection {
    background-color: $list-group-hover-bg;
  }
  .link {
    text-decoration: none;
  }
  .glyphicon {
    margin-right: 7px;
  }
}

a.accordion-toggle {
  display: block;
}

// fix weird ui-bootstrap bug
.panel-collapse.in {
  height: auto !important;
}

